# rubiks-cube

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.py  download_pdb.py  test_threads_count.py
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/cube/: cube.cpp  cube.h  cubie.cpp  cubie.h  flat_cube.h  move.cpp  move.h  move_utils.h  simple_flat_cube.cpp  simple_flat_cube.h
src/heuristic/: calculate_pattern_database_array.h  coordinate_calculator.h  corner_coordinate_calculator.cpp  corner_coordinate_calculator.h  corner_pattern_database.cpp  corner_pattern_database.h  cubie_distance.cpp  cubie_distance.h  heuristic_function.cpp  heuristic_function.h  left_edge_coordinate_calculator.cpp  left_edge_coordinate_calculator.h  left_edge_pattern_database.cpp  left_edge_pattern_database.h  pattern_database.cpp  pattern_database.h  pattern_database_heuristic.cpp  pattern_database_heuristic.h  position_edge_coordinate_calculator.cpp  position_edge_coordinate_calculator.h  position_edge_pattern_database.cpp  position_edge_pattern_database.h  right_edge_coordinate_calculator.cpp  right_edge_coordinate_calculator.h  right_edge_pattern_database.cpp  right_edge_pattern_database.h
src/presentation/: cube_presentation.cpp  cube_presentation.h
src/solver/: corner_pattern_database.cpp  corner_pattern_database.h  cubie_distance.cpp  cubie_distance.h  heuristic_function.cpp  heuristic_function.h  solver.cpp  solver.h
src/utils/: fast_math.h  packed_array.cpp  packed_array.h
static/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  random5.txt
tests/: CMakeLists.txt  test_anti_cube.cpp  test_corner_coordinate_calculator.cpp  test_flat_cube.cpp  test_heuristic_function.cpp  test_left_edge_coordinate_calculator.cpp  test_packed_array.cpp  test_position_edge_coordinate_calculator.cpp  test_positions_count.cpp  test_right_edge_coordinate_calculator.cpp  test_solver.cpp  test_turn.cpp
